--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@
 .read-the-docs {
   color: #888;
 }
+
+.comment-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.comment-card {
+  border: 1px white solid;
+}
