this commit will add links to articles based on topic

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
   text-align: center;
   box-sizing: border-box;
+  /* border: 1px red solid; */
+}
+
+body {
+  /* border: 1px blue solid; */
+  margin: 0;
+}
+
+.main-content {
+  padding: 0 2rem;
 }
 
 .loading-spinner {
@@ -41,4 +52,36 @@
 
 .article-card {
   border: 1px white solid;
+}
+
+.article-img {
+  max-width: 100%;
+}
+
+header {
+  padding: 0;
+  /* border: red 1px solid; */
+  border-bottom: 1px white solid;
+}
+
+header > * {
+  margin: 0;
+}
+
+.topic-list {
+  list-style: none;
+  margin: 0;
+  padding: 1em; 
+  /* border: red 1px solid; */
+}
+
+.topic-card {
+  display: inline;
+  padding: 0.5em 1em;
+  margin: 1em;
+  border: 1px white solid;
+}
+
+.topic-card:hover {
+  opacity: 0.5;
 }
