--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,11 @@
   margin: 0;
   padding: 0;
   text-align: center;
-  box-sizing: border-box;
   /* border: 1px red solid; */
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -15,6 +18,14 @@ body {
 
 .main-content {
   padding: 0 2rem;
+  height: 80vh;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll; 
+}
+
+.main-content::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 .loading-spinner {
@@ -62,10 +73,31 @@ header {
   padding: 0;
   /* border: red 1px solid; */
   border-bottom: 1px white solid;
+  height: 10vh;
 }
 
 header > * {
   margin: 0;
+}
+
+footer {
+  /* border: red solid 1px; */
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px whitesmoke solid;
+}
+
+footer > a {
+  /* border: red solid 1px; */
+  text-decoration: none;
+}
+
+footer > a > p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding: 0;
 }
 
 .topic-list {
@@ -84,4 +116,44 @@ header > * {
 
 .topic-card:hover {
   opacity: 0.5;
+}
+
+.form-input {
+  width: 100%;
+  padding: 10px 0;
+  background: none;
+  border: none;
+  border-bottom: 1px solid whitesmoke;
+  color: whitesmoke;
+  font-size: 14px;
+  text-transform: uppercase;
+  outline: none;
+  transition: border-color .2s;
+}
+
+.form-input::placeholder {
+  color: whitesmoke;
+}
+
+.form-input:focus {
+  border-bottom-color: red;
+}
+
+.form-input-textarea {
+  width: 100%;
+  height: 50vh;
+  resize: none;
+}
+
+.form-input-button {
+  background: none;
+  border: none;
+  color: whitesmoke;
+  font-size: 14px;
+  cursor: pointer;
+  outline: none;
+}
+
+.form-input-button:hover {
+  color: red;
 }
