this commit adds the function to sort articles

--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,24 @@ body {
   padding-left: 0;
 }
 
+.article-list > a {
+  text-decoration: none;
+}
+
+.dropdown-container {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 0.5em;
+  /* border: red 1px solid; */
+  padding: 0;
+}
+
+.dropdown-container > * {
+  /* border: green 1px solid; */
+  margin: 0;
+}
+
 .card {
   padding: 2em;
 }
@@ -63,6 +81,47 @@ body {
 
 .article-card {
   border: 1px white solid;
+  display: grid;
+  grid-template-columns: repeat(12, [col-start] 1fr);
+  grid-template-rows: repeat(3, [col-start] 1fr);
+  gap: 5px;
+  padding: 1em;
+  margin-bottom: 1em;
+}
+
+.article-card > * {
+  /* border: red 1px solid; */
+  grid-column: col-start / span 12;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+.article-author {
+  grid-row: 1 / span 1;
+  grid-column: col-start / span 5;
+}
+
+.article-created {
+  grid-row: 1 / 2;
+  grid-column: 6 / span 7;
+}
+
+.article-title {
+  text-align: start;
+  grid-row: 2 / span 1;
+  grid-column: col-start / span 12;
+}
+
+.article-comments {
+  grid-row: 3 / span 1;
+  grid-column: 4 / span 3;
+}
+
+.article-votes {
+  grid-row: 3 / span 1;
+  grid-column: col-start / span 3;
 }
 
 .article-img {
@@ -81,7 +140,7 @@ header > * {
 }
 
 footer {
-  /* border: red solid 1px; */
+  border: red solid 1px;
   height: 10vh;
   display: flex;
   align-items: center;
