this commit adds error handling to axios requests

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body {
 }
 
 .main-content {
+  /* border: 1px solid red; */
   padding: 0 2rem;
   height: 80vh;
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
@@ -156,4 +157,20 @@ footer > a > p {
 
 .form-input-button:hover {
   color: red;
+}
+
+.error-page {
+  /* background-color: black; */
+  height: 100%;
+  display: grid;
+  align-content: center;
+}
+
+.error-page > * {
+  margin: 0;
+}
+
+.error-page > a > button {
+  padding: 0.5em;
+  margin: 1em;
 }
