--- a/src/App.css
+++ b/src/App.css
@@ -1,240 +1,140 @@
-#root {
-  width: 100%;
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  /* border: 1px red solid; */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --black-gradient: linear-gradient(
+    144.39deg,
+    #ffffff -278.56%,
+    #6d6d6d -78.47%,
+    #11101d 91.61%
+  );
+  --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
 }
 
 * {
-  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-body {
-  /* border: 1px blue solid; */
-  margin: 0;
+.text-gradient {
+  background: radial-gradient(
+    64.18% 64.18% at 71.16% 35.69%,
+    #def9fa 0.89%,
+    #bef3f5 17.23%,
+    #9dedf0 42.04%,
+    #7de7eb 55.12%,
+    #5ce1e6 71.54%,
+    #33bbcf 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
 }
 
-.main-content {
-  /* border: 1px solid red; */
-  padding: 0 2rem;
-  height: 75vh;
-  -ms-overflow-style: none; /* for Internet Explorer, Edge */
-  scrollbar-width: none; /* for Firefox */
-  overflow-y: scroll; 
+.bg-blue-gradient {
+  background: linear-gradient(
+    157.81deg,
+    #def9fa -43.27%,
+    #bef3f5 -21.24%,
+    #9dedf0 12.19%,
+    #7de7eb 29.82%,
+    #5ce1e6 51.94%,
+    #33bbcf 90.29%
+  );
 }
 
-.main-content::-webkit-scrollbar {
-  display: none; /* for Chrome, Safari, and Opera */
+.bg-black-gradient {
+  background: linear-gradient(
+    144.39deg,
+    #ffffff -278.56%,
+    #6d6d6d -78.47%,
+    #11101d 91.61%
+  );
 }
 
-.loading-spinner {
-  margin: auto;
-  border: 20px solid rgb(239, 250, 250);
-  border-radius: 50%;
-  border-top: 20px solid rgb(67, 125, 125);
-  width: 130px;
-  height: 130px;
-  animation: spinner 2s linear infinite;
+.bg-black-gradient-2 {
+  background: linear-gradient(
+    -168.39deg,
+    #ffffff -278.56%,
+    #6d6d6d -78.47%,
+    #11101d 91.61%
+  );
 }
 
-.article-list {
-  /* border: 1px red solid; */
-  list-style: none;
-  padding-left: 0;
+.bg-gray-gradient {
+  background: linear-gradient(
+    153.47deg,
+    rgba(255, 255, 255, 0) -341.94%,
+    #14101d 95.11%
+  );
 }
 
-.article-list > a {
-  text-decoration: none;
-  color: white;
+.bg-discount-gradient {
+  background: linear-gradient(125.17deg, #272727 0%, #11101d 100%);
 }
 
-.dropdown-container {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  gap: 0.5em;
-  /* border: red 1px solid; */
-  padding: 0;
+.box-shadow {
+  box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
 }
 
-.dropdown-container > * {
-  /* border: green 1px solid; */
-  margin: 0;
+.sidebar {
+  -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-.card {
-  padding: 2em;
+@-webkit-keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(100px);
+    transform: translateY(100px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
 }
 
-.read-the-docs {
-  color: #888;
+@keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(100px);
+    transform: translateY(100px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
 }
 
-.comment-list {
-  list-style: none;
-  padding-left: 0;
+.feature-card:hover {
+  background: var(--black-gradient);
+  box-shadow: var(--card-shadow);
 }
 
-.comment-card {
-  border: 1px white solid;
+.feedback-container .feedback-card:last-child {
+  margin-right: 0px;
 }
 
-.article-card {
-  border: 1px white solid;
-  display: grid;
-  grid-template-columns: repeat(12, [col-start] 1fr);
-  grid-template-rows: repeat(3, [col-start] auto);
-  gap: 5px;
-  padding: 1em;
-  margin-bottom: 1em;
+.feedback-card {
+  background: transparent;
 }
 
-.article-card > * {
-  /* border: red 1px solid; */
-  grid-column: col-start / span 12;
-  margin: 0;
-  display: flex;
-  align-items: center;
+.feedback-card:hover {
+  background: var(--black-gradient);
 }
 
-.article-author {
-  justify-content: start;
-  grid-row: 1 / span 1;
-  grid-column: col-start / span 5;
+.blue__gradient {
+  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
+  filter: blur(123px);
 }
 
-.article-created {
-  justify-content: end;
-  grid-row: 1 / 2;
-  grid-column: 6 / span 7;
+.pink__gradient {
+  background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 100%);
+  filter: blur(900px);
 }
 
-.article-title {
-  text-align: start;
-  grid-row: 2 / span 1;
-  grid-column: col-start / span 12;
-}
-
-.article-comments {
-  justify-content: start;
-  grid-row: 3 / span 1;
-  grid-column: 5 / span 6;
-}
-
-.article-votes {
-  justify-content: start;
-  grid-row: 3 / span 1;
-  grid-column: col-start / span 4;
-}
-
-.article-img {
-  max-width: 100%;
-}
-
-header {
-  padding: 0;
-  /* border: red 1px solid; */
-  border-bottom: 1px white solid;
-  height: 15vh;
-}
-
-header > * {
-  margin: 0;
-}
-
-footer {
-  /* border: red solid 1px; */
-  height: 10vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-top: 1px whitesmoke solid;
-}
-
-footer > a {
-  /* border: red solid 1px; */
-  text-decoration: none;
-}
-
-footer > a > p {
-  margin-block-start: 0;
-  margin-block-end: 0;
-  padding: 0;
-}
-
-.topic-list {
-  list-style: none;
-  margin: 0;
-  padding: 1em; 
-  /* border: red 1px solid; */
-  overflow-x:scroll
-}
-
-.topic-card {
-  display: inline;
-  padding: 0.5em 1em;
-  margin: 1em;
-  border: 1px white solid;
-}
-
-.topic-card:hover {
-  opacity: 0.5;
-}
-
-.form-input {
-  width: 100%;
-  padding: 10px 0;
-  background: none;
-  border: none;
-  border-bottom: 1px solid whitesmoke;
-  color: whitesmoke;
-  font-size: 14px;
-  text-transform: uppercase;
-  outline: none;
-  transition: border-color .2s;
-}
-
-.form-input::placeholder {
-  color: whitesmoke;
-}
-
-.form-input:focus {
-  border-bottom-color: red;
-}
-
-.form-input-textarea {
-  width: 100%;
-  height: 40vh;
-  resize: none;
-}
-
-.form-input-button {
-  background: none;
-  border: none;
-  color: whitesmoke;
-  font-size: 14px;
-  cursor: pointer;
-  outline: none;
-}
-
-.form-input-button:hover {
-  color: red;
-}
-
-.error-page {
-  /* background-color: black; */
-  height: 100%;
-  display: grid;
-  align-content: center;
-}
-
-.error-page > * {
-  margin: 0;
-}
-
-.error-page > a > button {
-  padding: 0.5em;
-  margin: 1em;
+.white__gradient {
+  background: rgba(255, 255, 255, 0.6);
+  filter: blur(750px);
 }
